src/bootstrap/test/v0_13/rejects/06_platform_suffix_collision_macos/dup_macos.zg
pub fn value() -> int {
    return 2
}
